--- a/index.html
+++ b/index.html
@@ -353,121 +353,8 @@
           </div>
         </div>
       </div>
-
-      <div class="field">
-        <label class="label">City</label>
-        <div class="control">
-          <input
-            id="CityInput"
-            class="input"
-            type="text"
-            placeholder="ex. Los Angeles"
-          />
-        </div>
-      </div>
     </section>
 
-    <section class="section" id="TestCenter" style="display: block">
-      <div class="TestCenterHeader">
-        Test Center Locations
-      </div>
-      <div class="field">
-        <label class="label">Test Site Location</label>
-        <input class="input" type="text" placeholder="ex. Long Beach" />
-      </div>
-
-      <div class="field">
-        <label class="label">State</label>
-        <div class="control">
-          <div class="select">
-            <select>
-              <option>Select State</option>
-              <option value="AL">Alabama</option>
-              <option value="AK">Alaska</option>
-              <option value="AZ">Arizona</option>
-              <option value="AR">Arkansas</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="CT">Connecticut</option>
-              <option value="DE">Delaware</option>
-              <option value="DC">District Of Columbia</option>
-              <option value="FL">Florida</option>
-              <option value="GA">Georgia</option>
-              <option value="HI">Hawaii</option>
-              <option value="ID">Idaho</option>
-              <option value="IL">Illinois</option>
-              <option value="IN">Indiana</option>
-              <option value="IA">Iowa</option>
-              <option value="KS">Kansas</option>
-              <option value="KY">Kentucky</option>
-              <option value="LA">Louisiana</option>
-              <option value="ME">Maine</option>
-              <option value="MD">Maryland</option>
-              <option value="MA">Massachusetts</option>
-              <option value="MI">Michigan</option>
-              <option value="MN">Minnesota</option>
-              <option value="MS">Mississippi</option>
-              <option value="MO">Missouri</option>
-              <option value="MT">Montana</option>
-              <option value="NE">Nebraska</option>
-              <option value="NV">Nevada</option>
-              <option value="NH">New Hampshire</option>
-              <option value="NJ">New Jersey</option>
-              <option value="NM">New Mexico</option>
-              <option value="NY">New York</option>
-              <option value="NC">North Carolina</option>
-              <option value="ND">North Dakota</option>
-              <option value="OH">Ohio</option>
-              <option value="OK">Oklahoma</option>
-              <option value="OR">Oregon</option>
-              <option value="PA">Pennsylvania</option>
-              <option value="RI">Rhode Island</option>
-              <option value="SC">South Carolina</option>
-              <option value="SD">South Dakota</option>
-              <option value="TN">Tennessee</option>
-              <option value="TX">Texas</option>
-              <option value="UT">Utah</option>
-              <option value="VT">Vermont</option>
-              <option value="VA">Virginia</option>
-              <option value="WA">Washington</option>
-              <option value="WV">West Virginia</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WY">Wyoming</option>
-            </select>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--
-    <div class="field">
-      <label class="label">Message</label>
-      <div class="control">
-        <textarea class="textarea" placeholder="Textarea"></textarea>
-      </div>
-    </div>
-
-    <div class="field">
-      <div class="control">
-        <label class="checkbox">
-          <input type="checkbox" />
-          I agree to the <a href="#">terms and conditions</a>
-        </label>
-      </div>
-    </div>
-
-    <div class="field">
-      <div class="control">
-        <label class="radio">
-          <input type="radio" name="question" />
-          Yes
-        </label>
-        <label class="radio">
-          <input type="radio" name="question" />
-          No
-        </label>
-      </div>
-    </div>
--->
     <div id="Submit" class="fieldisgrouped" style="display: block">
       <div class="control">
         <button class="button is-link" id="ProduceCovid">Submit</button>
@@ -476,30 +363,8 @@
         <button class="button is-link is-light">Cancel</button>
       </div>
     </div>
-<!--
-    <div id="CovidDataDisplay" style="display: none;">
-      <div id="CovidAPIResponse">
-        <h1>COVID-19 Information</h1>
-        <div id="CountryResponse">
-          <div id="CountryChosen"></div>
-          <div class="LastUpdate"></div>
-          <h1>Confirmed Cases</h1>
-          <div id="confirmed"></div>
-          <h1>Total Deaths</h1>
-          <div id="Deaths"></div>
-          <h1>Total Recovered</h1>
-          <div id="Recovered"></div>
-          <h1>Rate of Recovery</h1>
-          <div id="RecoverRate"></div>
-          <h2>Rate of Death</h2>
-          <div id="DeathRate"></div>
-          
-        </div>
-        <div id="CityResponse"></div>
-      </div>
-      <div class="GoogleAPIResponse"></div>
-    -->
 
+<!--API Responses-->
     <div id="CovidDataDisplay" style="display: none;">
         <h1>COVID-19 Information</h1>
         <div id="CountryResponse"></div>
