added comments to google script

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="jscript.js" defer></script>
+    <!-- Google map api key/-->
     <script
       src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCCfUi1OEBugxR7jMTKbP7y22Y1V_BFodw"
       async
