Incorporating notes to bring back prior version.

--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
       defer
     ></script>
     <!-- import the webpage's javascript file -->
+    <!--Adding a comment-->
   </body>
 
   <footer>
