Re-ncluding CSS code for HTML

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Hello!</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
     <!--<script
       src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=createMap&libraries=places"
